--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -2,360 +2,26 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>System Test | Taithai</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- ฟอนต์สวย ๆ จาก Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      /* ไล่สีพื้นหลังแบบ modern */
-      background: radial-gradient(circle at top, #fce7f3, #e0f2fe 40%, #0f172a 95%);
-      color: #0f172a;
-    }
-
-    .glass-card {
-      position: relative;
-      width: 100%;
-      max-width: 520px;
-      padding: 32px 28px 26px;
-      border-radius: 24px;
-      background: rgba(255, 255, 255, 0.82);
-      box-shadow:
-        0 24px 60px rgba(15, 23, 42, 0.32),
-        0 0 0 1px rgba(148, 163, 184, 0.25);
-      backdrop-filter: blur(18px);
-      border: 1px solid rgba(226, 232, 240, 0.9);
-      overflow: hidden;
-    }
-
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      font-size: 11px;
-      letter-spacing: 0.06em;
-      text-transform: uppercase;
-      background: rgba(15, 23, 42, 0.04);
-      color: #64748b;
-      margin-bottom: 18px;
-    }
-
-    .badge-dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: #22c55e;
-      box-shadow: 0 0 0 6px rgba(34, 197, 94, 0.2);
-    }
-
-    .title {
-      font-size: 26px;
-      line-height: 1.25;
-      font-weight: 600;
-      color: #020617;
-      margin-bottom: 10px;
-    }
-
-    .subtitle {
-      font-size: 14px;
-      line-height: 1.6;
-      color: #6b7280;
-      margin-bottom: 22px;
-    }
-
-    .meta-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px 16px;
-      margin-bottom: 22px;
-      font-size: 12px;
-      color: #6b7280;
-    }
-
-    .meta-item {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      padding: 3px 9px;
-      border-radius: 999px;
-      background: #f1f5f9;
-    }
-
-    .meta-dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 999px;
-      background: #0ea5e9;
-    }
-
-    .divider {
-      width: 100%;
-      height: 1px;
-      background: linear-gradient(to right, transparent, #e2e8f0, transparent);
-      margin-bottom: 18px;
-    }
-
-    .env-box {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 12px;
-      border-radius: 16px;
-      background: #0f172a;
-      color: #e5e7eb;
-      margin-bottom: 18px;
-    }
-
-    .env-label {
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.09em;
-      color: #9ca3af;
-      margin-bottom: 4px;
-    }
-
-    .env-name {
-      font-size: 13px;
-      font-weight: 500;
-    }
-
-    .env-pill {
-      font-size: 11px;
-      padding: 4px 9px;
-      border-radius: 999px;
-      background: rgba(15, 23, 42, 1);
-      border: 1px solid rgba(148, 163, 184, 0.8);
-      color: #e5e7eb;
-    }
-
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .btn-primary,
-    .btn-ghost {
-      border-radius: 999px;
-      padding: 8px 14px;
-      font-size: 13px;
-      font-weight: 500;
-      border: none;
-      cursor: pointer;
-      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease,
-        color 0.15s ease, border-color 0.15s ease;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-    }
-
-    .btn-primary {
-      background: #020617;
-      color: #f9fafb;
-      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.45);
-    }
-
-    .btn-primary:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 18px 35px rgba(15, 23, 42, 0.55);
-      background: #020617;
-    }
-
-    .btn-ghost {
-      background: transparent;
-      color: #334155;
-      border: 1px solid #cbd5f5;
-    }
-
-    .btn-ghost:hover {
-      background: #0f172a;
-      color: #e5e7eb;
-      border-color: #0f172a;
-    }
-
-    .btn-dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 999px;
-      background: #22c55e;
-    }
-
-    .corner-orb {
-      position: absolute;
-      width: 140px;
-      height: 140px;
-      border-radius: 999px;
-      background: radial-gradient(circle, rgba(56, 189, 248, 0.4), transparent 70%);
-      top: -40px;
-      right: -40px;
-      opacity: 0.7;
-      pointer-events: none;
-    }
-
-    .corner-orb-2 {
-      position: absolute;
-      width: 120px;
-      height: 120px;
-      border-radius: 999px;
-      background: radial-gradient(circle, rgba(244, 114, 182, 0.35), transparent 70%);
-      bottom: -40px;
-      left: -40px;
-      opacity: 0.8;
-      pointer-events: none;
-    }
-
-    .corner-tag {
-      position: absolute;
-      top: 18px;
-      right: 24px;
-      font-size: 11px;
-      padding: 3px 8px;
-      border-radius: 999px;
-      background: rgba(15, 23, 42, 0.88);
-      color: #e5e7eb;
-      display: inline-flex;
-      align-items: center;
-      gap: 5px;
-      box-shadow: 0 8px 20px rgba(15, 23, 42, 0.5);
-    }
-
-    .corner-tag-dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 999px;
-      background: #22c55e;
-    }
-
-    /* ให้ทุกอย่างดูละมุนขึ้นบนจอเล็ก */
-    @media (max-width: 600px) {
-      .glass-card {
-        margin: 16px;
-        padding: 22px 18px 20px;
-        border-radius: 20px;
-      }
-
-      .title {
-        font-size: 22px;
-      }
-
-      .subtitle {
-        font-size: 13px;
-      }
-
-      .env-box {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 8px;
-      }
-
-      .corner-tag {
-        top: 14px;
-        right: 16px;
-      }
-    }
-  </style>
+  <title>Secure Home V2</title>
 </head>
 <body>
-  <script src="https://taithai-tai.github.io/app/token.js"></script>
-    <script>
-      const app = document.getElementById("app");
-  
-      Token.useOnce({
-        cleanUrl: false,   // ให้ token ยังอยู่ใน URL จะได้เห็นว่าเป็นตัวเดิม
-  
-        onFirstUse({ token }) {
-          app.innerHTML = `
-            🎉 ยินดีต้อนรับ!<br>
-            โทเค็นใช้งานครั้งแรกเรียบร้อยแล้ว<br>
-            <small>token: ${token}</small>
-          `;
-        },
-  
-        onAlreadyUsed({ token }) {
-          app.innerHTML = `
-            ⛔ โทเค็นนี้ถูกใช้ไปแล้วในอุปกรณ์นี้<br>
-            <small>token: ${token}</small><br><br>
-            กรุณาไปที่ <b>testV2GenToken.html</b> เพื่อรับโทเค็นใหม่
-          `;
-        },
-  
-        onInvalid(reason) {
-          app.innerHTML = `
-            ❌ โทเค็นไม่ถูกต้อง (${reason})<br><br>
-            กรุณาเริ่มจาก <b>testV2GenToken.html</b>
-          `;
-        }
-      });
-    </script>
-  <main class="glass-card">
-    <div class="corner-orb"></div>
-    <div class="corner-orb-2"></div>
+  <!-- กล่องสำหรับโชว์ข้อความจาก token.js -->
+  <div id="app">กำลังตรวจสอบโทเคน...</div>
 
-    <div class="corner-tag">
-      <span class="corner-tag-dot"></span>
-      LIVE · Test
-    </div>
+  <script src="https://taithai-tai.github.io/token/token.js"></script>
+  <script>
+    Token.useOnce({
+      // ถ้าอยากให้ลบ token ออกจาก URL หลังใช้ครั้งแรก ค่อยเปลี่ยนเป็น true
+      cleanUrl: false,
 
-    <div class="badge">
-      <span class="badge-dot"></span>
-      System Test Environment
-    </div>
-
-    <h1 class="title">Minimal Test Page พร้อมใช้งาน ✅</h1>
-    <p class="subtitle">
-      หน้านี้สร้างมาเพื่อใช้ทดสอบระบบโฮสติ้ง / เซิร์ฟเวอร์ / DNS หรือการ Deploy เท่านั้น
-      <br>คุณสามารถแก้ไข ลบ หรือเพิ่มโค้ดส่วนอื่น ๆ ได้ตามต้องการ
-    </p>
-
-    <div class="meta-row">
-      <div class="meta-item">
-        <span class="meta-dot"></span>
-        HTML Only
-      </div>
-      <div class="meta-item">
-        <span class="meta-dot" style="background:#22c55e;"></span>
-        No Backend
-      </div>
-      <div class="meta-item">
-        <span class="meta-dot" style="background:#a855f7;"></span>
-        Safe to Modify
-      </div>
-    </div>
-
-    <div class="divider"></div>
-
-    <section class="env-box">
-      <div>
-        <div class="env-label">Current Mode</div>
-        <div class="env-name">Taithai / System Testing Page</div>
-      </div>
-      <div class="env-pill">Status: Running</div>
-    </section>
-
-    <div class="buttons">
-      <button class="btn-primary">
-        <span class="btn-dot"></span>
-        Test Completed
-      </button>
-      <button class="btn-ghost">
-        View Source & Edit
-      </button>
-    </div>
-  </main>
+      // ถ้าอยากเปลี่ยนข้อความก็ใส่ messages ใหม่ได้
+      // ถ้าไม่ใส่ จะใช้ข้อความ default ใน token.js
+      messages: {
+        first: "🎉 ยินดีต้อนรับ! ใช้โทเคนนี้ครั้งแรกแล้ว",
+        used: "⛔ โทเคนนี้ถูกใช้ไปแล้วในอุปกรณ์นี้",
+        invalid: "❌ โทเคนไม่ถูกต้อง กรุณากลับไปสร้างใหม่"
+      }
+    });
+  </script>
 </body>
 </html>
