--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -8,7 +8,7 @@
   <!-- กล่องสำหรับโชว์ข้อความจาก token.js -->
   <div id="app">กำลังตรวจสอบโทเคน...</div>
 
-  <script src="https://taithai-tai.github.io/app/token.js"></script>
+  <script src="https://taithai.co/app/token.js"></script>
   <script>
     Token.useOnce({
       // ถ้าอยากให้ลบ token ออกจาก URL หลังใช้ครั้งแรก ค่อยเปลี่ยนเป็น true
