--- a/home/testV2buttom.html
+++ b/home/testV2buttom.html
@@ -74,7 +74,7 @@
   <div class="card">
     <h1>ปุ่มทดสอบระบบ</h1>
     <p>กดปุ่มเพื่อทดสอบ Event, JS หรือการทำงานของปุ่มบนเซิร์ฟเวอร์</p>
-    <button class="btn" onclick="window.open('https://taithai-tai.github.io/test/home/testV2GenToken.html', '_blank');">
+    <button class="btn" onclick="('https://taithai-tai.github.io/test/home/testV2GenToken.html', '_blank');">
     </button>
 
     <div id="result"></div>
