--- a/home/testV2buttom.html
+++ b/home/testV2buttom.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
 <body>
-  <div class="card">
-    <h1>ปุ่มทดสอบระบบ</h1>
-    <p>กดปุ่มเพื่อทดสอบ Event, JS หรือการทำงานของปุ่มบนเซิร์ฟเวอร์</p>
-    <button class="btn" onclick="('https://taithai-tai.github.io/test/home/testV2GenToken.html', '_blank');">
-    </button>
+  <button onclick="('https://taithai-tai.github.io/test/home/testV2GenToken.html', '_blank');">"GOOOOOO"</button>
 </body>
 </html>
