--- a/home/testV2buttom.html
+++ b/home/testV2buttom.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="th">
 <body>
-  <button onclick="('https://taithai-tai.github.io/test/home/testV2GenToken.html', '_blank');">"GOOOOOO"</button>
+  <button onclick="window.location.href='https://taithai-tai.github.io/test/home/testV2GenToken.html';">
+  G000000
+</button>
 </body>
 </html>
